--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "blade-ui-kit/blade-ui-kit": "^0.6.2",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.5",
+        "php-mqtt/client": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
