--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "mike42/escpos-php": "^4.0",
         "php-mqtt/client": "^2.1"
     },
     "require-dev": {
