--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
         "bootstrap": "^5.2.3",
         "laravel-vite-plugin": "^1.0.0",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.13",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
+        "autoprefixer": "^10.4.20",
+        "postcss": "^8.4.47",
+        "vue": "^3.5.10"
     }
 }
