--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^5.1.4",
         "autoprefixer": "^10.4.20",
+        "flowbite": "^2.5.2",
         "postcss": "^8.4.47",
         "vue": "^3.5.10"
     }
